# sc_cuda

./: .gitignore  CMakeLists.txt  README.md  analysis_cuda.ipynb  analysis_mpi.ipynb  analysis_omp.ipynb  analysis_seq.ipynb  common.cpp  common.h  compare.ipynb  convert_input.py  convert_output.py  cuda.cu  cuda_seam_carving.cu  detail copy.ipynb  detail.ipynb  mpi.cpp  openmp.cpp  parallel.cu  performance_measurement.py  process_image.py  read.md  run_program.py  sequential.cpp  serial.cpp
inputdata_temp/: 100.pnm  1082.pnm  200.pnm  300.pnm  320.pnm  340.pnm  400.pnm  404.pnm  440.pnm  480.pnm  500.pnm  504.pnm  512.pnm  520.pnm  540.pnm  580.pnm  600.pnm  604.pnm  606.pnm  608.pnm  620.pnm  640.pnm  654.pnm  700.pnm  728.pnm  800.pnm
outputdata_temp/: output_100_cuda.pnm  output_100_mpi.pnm  output_100_omp.pnm  output_1082_cuda.pnm  output_1082_mpi.pnm  output_1082_seq.pnm  output_200_cuda.pnm  output_200_mpi.pnm  output_200_seq.pnm  output_300_cuda.pnm  output_300_mpi.pnm  output_300_omp.pnm  output_320_cuda.pnm  output_320_mpi.pnm  output_340_cuda.pnm  output_340_mpi.pnm  output_340_seq.pnm  output_400_cuda.pnm  output_400_mpi.pnm  output_404_cuda.pnm  output_404_mpi.pnm  output_404_omp.pnm  output_440_cuda.pnm  output_440_mpi.pnm  output_440_omp.pnm  output_480_cuda.pnm  output_480_omp.pnm  output_500_cuda.pnm  output_500_mpi.pnm  output_500_seq.pnm  output_504_cuda.pnm  output_504_mpi.pnm  output_504_seq.pnm  output_512_cuda.pnm  output_512_mpi.pnm  output_520_cuda.pnm  output_520_mpi.pnm  output_520_seq.pnm  output_540_cuda.pnm  output_540_mpi.pnm  (+33 more)
result_json/: cuda_results.json  mpi_results.json  omp_results.json  sequential_results.json
